Agregando Arrays y objetos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Simulador Interactivo</title>
 </head>
 <body>
-    <script src="simulador.js"></script>
+    <script src="/js/simulador.js"></script>
 </body>
 </html>
